[package]
name = "xx-toolkit"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"
description = "我个人的 Rust 工具包."

[dependencies]
anyhow = "1.0.98"
rand = "0.9.1"
serde = "1.0.219"
serde_yaml = "0.9.34"
serde_json = "1.0.140"
rumqttc = "0.24.0"
bytes = "1.10.1"
reqwest = { version = "0.12.15", default-features = false, features = ["blocking", "json", "rustls-tls"] }

